fix: class remains displayed on Mobile until click somewhere else

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -186,13 +186,10 @@ footer.footer-container {
     padding: 0.25em 0.75em;
     border-radius: 1em;
     border: 1px solid var(--b-bg-3);
+    -webkit-tap-highlight-color: transparent; // Remove default mobile tap highlight
   }
 
-  a.active {
-    background-color: var(--b-bg-3);
-  }
-
-  a:hover {
+  a.active, a:active {
     background-color: var(--b-bg-3);
   }
 }
